--- a/main/templates/users-profile.html
+++ b/main/templates/users-profile.html
@@ -65,7 +65,7 @@
 
               <div class="tab-pane fade show active profile-overview" id="profile-overview">
                 <h5 class="card-title">About</h5>
-                <p class="small fst-italic">{{ contractor.about }}</p>
+                <p class="small fst-italic">{{ contractor.project.project_name }} Project done by {{ contractor.first_name }} {{ contractor.last_name }}.</p>
 
                 <h5 class="card-title">Profile Details</h5>
 
