--- a/main/templates/users-profile.html
+++ b/main/templates/users-profile.html
@@ -22,7 +22,7 @@
         <div class="card">
           <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
-            <img src="{% static 'assets/img/profile-img.jpg' %}" alt="Profile" class="rounded-circle">
+            <img src="{% static 'assets/img/ic_user_1.svg' %}" alt="Profile" class="rounded-circle">
             <h2>{{ contractor.first_name }} {{ contractor.last_name }} </h2>
             <h3>{{ contractor.project.project_name }}</h3>
             <div class="social-links mt-2">
@@ -47,9 +47,9 @@
                 <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Overview</button>
               </li>
               {% if is_me %}
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Edit Profile</button>
-              </li>
+              </li> -->
 
               <!--<li class="nav-item">
                 <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-settings">Settings</button>
@@ -81,10 +81,7 @@
 
                 
 
-                <div class="row">
-                  <div class="col-lg-3 col-md-4 label">Phone</div>
-                  <div class="col-lg-9 col-md-8">{{ contractor.phone_number }}</div>
-                </div>
+           
 
               
                 <div class="card">
@@ -103,44 +100,20 @@
         </div>
         <ul>
           <div>
-            <p>Comments</p>
+            <p>Project Updates</p><hr>
           </div>
             {% for message in messages %}
             <li>{{ message.message }}</li>
             {% empty %}
-            <div class="">No comments</div>
+            <div class="">No updates</div>
             {% endfor %}
         </ul>
               </div>
 
-              <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
+              
 
-                <!-- Profile Edit Form -->
-                <form>
-                  <div class="row mb-3">
-                    <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
-                    <div class="col-md-8 col-lg-9">
-                      <img src="{% static 'assets/img/profile-img.jpg' %}" alt="Profile">
-                      <div class="pt-2">
-                        <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><i class="bi bi-upload"></i></a>
-                        <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"><i class="bi bi-trash"></i></a>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row mb-3">
-                    <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Full Name</label>
-                    <div class="col-md-8 col-lg-9">
-                      <input name="fullName" type="text" class="form-control" id="fullName" value="Vince Muiruri">
-                    </div>
-                  </div>
-
-                  <div class="row mb-3">
-                    <label for="about" class="col-md-4 col-lg-3 col-form-label">About</label>
-                    <div class="col-md-8 col-lg-9">
-                      <textarea name="about" class="form-control" id="about" style="height: 100px">Ruiru bridge is a crucial pedestrian crossing that enhances connectivity and safety for residents and travelers. Spanning a strategic location, it provides a reliable link over challenging terrain, ensuring accessibility during all seasons. Built with durable materials, it supports local mobility, trade, and community interactions efficiently.</textarea>
-                    </div>
-                  </div>
+                
+                
 
                   <!--<div class="row mb-3">
                     <label for="company" class="col-md-4 col-lg-3 col-form-label">Company</label>
@@ -200,15 +173,15 @@
                     </div>
                   </div>-->
 
-                  <div class="text-center">
+                  <!-- <div class="text-center">
                     <button type="submit" class="btn btn-primary">Save Changes</button>
-                  </div>
+                  </div> -->
                 </form>
                 <!-- End Profile Edit Form -->
 
               </div>
-
-              <div class="tab-pane fade pt-3" id="profile-settings">
+<!-- 
+              <div class="tab-pane fade pt-3" id="profile-settings"> -->
 
                 <!--
                 <form>
